--- a/app/src/main/res/menu/menu_login.xml
+++ b/app/src/main/res/menu/menu_login.xml
@@ -4,7 +4,7 @@
       tools:context="name.pssst.app.activity.Login">
 
     <item android:id="@+id/action_settings"
-          android:icon="@drawable/ic_action_settings"
+          android:icon="@android:drawable/ic_menu_preferences"
           android:title="@string/action_settings"
           android:orderInCategory="100"
           android:showAsAction="ifRoom"/>
