--- a/app/src/main/res/layout/activity_push.xml
+++ b/app/src/main/res/layout/activity_push.xml
@@ -14,31 +14,33 @@
 
     <EditText
         android:id="@+id/receiver"
+        android:hint="@string/hint_receiver"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:hint="@string/hint_receiver"/>
+        />
 
     <EditText
         android:id="@+id/message"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:hint="@string/hint_message"
         android:inputType="textMultiLine|textAutoCorrect"
-        android:ems="10"
-        android:layout_gravity="center_horizontal"
-        android:layout_weight="1"
         android:singleLine="false"
         android:gravity="start|top"
-        android:hint="@string/hint_message"/>
+        android:ems="10"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_weight="1"/>
 
     <Button
         android:id="@+id/send"
+        android:text="@string/button_send"
+        android:textStyle="bold"
+        android:background="@color/highlight"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/button_send"
         android:layout_gravity="center_horizontal"
         android:layout_weight="0" style="?android:textAppearanceSmall"
-        android:layout_marginTop="@dimen/activity_vertical_margin"
-        android:textStyle="bold"/>
+        android:layout_marginTop="@dimen/activity_vertical_margin"/>
 
 </LinearLayout>
